# p2p-git-patch

./: Cargo.toml  README.md
src/: api.rs  behaviour.rs  cli.rs  client.rs  config.rs  daemon.rs  database.rs  git.rs  main.rs
src/api/: protocol.rs  test_server.rs  unix_socket.rs
src/database/: mem.rs  yaml.rs
src/git/: eager.rs
