[package]
name = "p2p-git-patch"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
clap = { version = "3.1.10", features = ["derive"] }
async-std = { version = "1.6.2", features = ["attributes"] }
log = "0.4"
env_logger = "0.9"
serde = { version =  "1.0", features = ["derive"] }
serde_yaml = "0.8"
multibase = "0.9"
git2 = "0.15"
async-trait = "0.1"
temp-dir = "0.1.11"

[dependencies.libp2p]
version = "0.49"
features = [
    "request-response",
    "mdns",
    "tcp",
    "dns",
    "async-std",
    # "kad",
    "websocket",
    "noise",
    "mplex",
    # "serde",
    "yamux"
]
